Profile Settings - fix z-index for error messages

--- a/src/styles/_profile-settings.sass
+++ b/src/styles/_profile-settings.sass
@@ -262,3 +262,7 @@ profile-component
                         border: none
                         background: $dark_overlay
                         align-content: flex-start
+
+.settings_form
+    .pbx_input_error
+        z-index: 1
